--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         }
       })(window.location);
     </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
