--- a/index.html
+++ b/index.html
@@ -8,54 +8,36 @@
     <meta name="monetag" content="98f4a2ba8dc6357af7ed2d733da51881"/>
 
     <!-- Judul -->
-    <title>Subs 4 Unlock - Unlock Links with Social Subscriptions</title>
+    <title>Analisa Sentimen</title>
 
     <!-- Meta Tag untuk SEO -->
     <meta
       name="description"
-      content="Easily unlock links with Subs 4 Unlock! Use Sub to Unlock, Subs 2 Unlock, or Sub Unlock Link for secure access via YouTube, WhatsApp, and more. Start now!"
+      content="Analyze sentiments with Analisa Sentimen! Upload and process CSV files to gain insights from reviews via secure data processing. Start now!"
     />
     <meta
       name="keywords"
-      content="Subs 4 Unlock, Sub for Unlock, Sub to Unlock, Subs to Unlock, Subs 4 Unlock, Sub 4 Unlock, Subs 2 Unlock, Sub 2 Unlock, Sub Unlock Link, link unlocking, social media unlock, YouTube subscribe unlock, WhatsApp group unlock, social media link unlocker, secure link sharing, subscription unlocker, unlock with subs, sub and unlock, subscribe to unlock links, social subscription tool"
+      content="Analisa Sentimen, sentiment analysis, review analysis, data processing, CSV upload, sentiment insights, data visualization, secure data analysis, analytics tool"
     />
-    <meta name="author" content="Subs 4 Unlock Team" />
+    <meta name="author" content="Analisa Sentimen Team" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="7 days" />
     <meta name="language" content="English" />
 
-    <!-- Open Graph Meta Tags untuk Media Sosial -->
-    <meta property="og:title" content="Subs 4 Unlock - Unlock Links with Social Subscriptions" />
-    <meta
-      property="og:description"
-      content="Easily unlock links with Subs 4 Unlock! Use Sub to Unlock, Subs 2 Unlock, or Sub Unlock Link for secure access via YouTube, WhatsApp, and more. Start now!"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://subs4unlock.com/" />
-    <meta
-      property="og:image"
-      content="https://subs4unlock.com/banner.webp"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Subs 4 Unlock Banner" />
-    <meta property="og:site_name" content="Subs 4 Unlock" />
-    <meta property="og:locale" content="en_US" />
-
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Subs 4 Unlock - Unlock Links with Social Subscriptions" />
+    <meta name="twitter:title" content="Analisa Sentimen" />
     <meta
       name="twitter:description"
-      content="Easily unlock links with Subs 4 Unlock! Use Sub to Unlock, Subs 2 Unlock, or Sub Unlock Link for secure access via YouTube, WhatsApp, and more. Start now!"
+      content="Analyze sentiments with Analisa Sentimen! Upload and process CSV files to gain insights from reviews via secure data processing. Start now!"
     />
     <meta
       name="twitter:image"
       content="https://subs4unlock.com/banner.webp"
     />
-    <meta name="twitter:image:alt" content="Subs 4 Unlock Banner" />
-    <meta name="twitter:site" content="@Subs4Unlock" />
-    <meta name="twitter:creator" content="@Subs4Unlock" />
+    <meta name="twitter:image:alt" content="Analisa Sentimen Banner" />
+    <meta name="twitter:site" content="@AnalisaSentimen" />
+    <meta name="twitter:creator" content="@AnalisaSentimen" />
 
     <!-- Favicon dan Ikon -->
     <link
@@ -73,15 +55,15 @@
       {
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
-        "name": "Subs 4 Unlock",
+        "name": "Analisa Sentimen",
         "operatingSystem": "Web",
         "applicationCategory": "Utilities",
-        "description": "Easily unlock links with Subs 4 Unlock, Sub for Unlock, Sub to Unlock, Subs to Unlock, Subs 4 Unlock, Sub 4 Unlock, Subs 2 Unlock, Sub 2 Unlock, and Sub Unlock Link via secure social media subscriptions on YouTube, WhatsApp, and more.",
+        "description": "Analyze sentiments with Analisa Sentimen. Upload and process CSV files to gain insights from reviews via secure data processing.",
         "url": "https://subs4unlock.com/",
         "image": "https://subs4unlock.com/banner.webp",
         "author": {
           "@type": "Organization",
-          "name": "Subs 4 Unlock Team"
+          "name": "Analisa Sentimen Team"
         }
       }
     </script>
