--- a/index.html
+++ b/index.html
@@ -3,41 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-adsense-account" content="ca-pub-5062495403106422"/>
-    <meta name="49401e454e95ccc887f18ccb8b85901a8a14fcb5" content="49401e454e95ccc887f18ccb8b85901a8a14fcb5" />
-    <meta name="monetag" content="98f4a2ba8dc6357af7ed2d733da51881"/>
 
     <!-- Judul -->
-    <title>Analisa Sentimen</title>
+    <title>PasteJav</title>
 
     <!-- Meta Tag untuk SEO -->
     <meta
       name="description"
-      content="Analyze sentiments with Analisa Sentimen! Upload and process CSV files to gain insights from reviews via secure data processing. Start now!"
+      content="Share and access links with PasteJav! Click buttons to open URLs securely and redirect to exciting destinations. Start exploring now!"
     />
     <meta
       name="keywords"
-      content="Analisa Sentimen, sentiment analysis, review analysis, data processing, CSV upload, sentiment insights, data visualization, secure data analysis, analytics tool"
+      content="PasteJav, link sharing, URL redirect, button links, secure link access, web navigation, click to open, random redirect, link management"
     />
-    <meta name="author" content="Analisa Sentimen Team" />
+    <meta name="author" content="PasteJav Team" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="7 days" />
     <meta name="language" content="English" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Analisa Sentimen" />
+    <meta name="twitter:title" content="PasteJav" />
     <meta
       name="twitter:description"
-      content="Analyze sentiments with Analisa Sentimen! Upload and process CSV files to gain insights from reviews via secure data processing. Start now!"
+      content="Share and access links with PasteJav! Click buttons to open URLs securely and redirect to exciting destinations. Start exploring now!"
     />
     <meta
       name="twitter:image"
-      content="https://subs4unlock.com/banner.webp"
+      content="https://pastejav.com/banner.webp"
     />
-    <meta name="twitter:image:alt" content="Analisa Sentimen Banner" />
-    <meta name="twitter:site" content="@AnalisaSentimen" />
-    <meta name="twitter:creator" content="@AnalisaSentimen" />
+    <meta name="twitter:image:alt" content="PasteJav Banner" />
+    <meta name="twitter:site" content="@PasteJav" />
+    <meta name="twitter:creator" content="@PasteJav" />
 
     <!-- Favicon dan Ikon -->
     <link
@@ -55,15 +52,15 @@
       {
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
-        "name": "Analisa Sentimen",
+        "name": "PasteJav",
         "operatingSystem": "Web",
         "applicationCategory": "Utilities",
-        "description": "Analyze sentiments with Analisa Sentimen. Upload and process CSV files to gain insights from reviews via secure data processing.",
-        "url": "https://subs4unlock.com/",
-        "image": "https://subs4unlock.com/banner.webp",
+        "description": "PasteJav allows users to share and access links through interactive buttons, with secure URL opening and random redirects for an engaging experience.",
+        "url": "https://pastejav.com/",
+        "image": "https://pastejav.com/banner.webp",
         "author": {
           "@type": "Organization",
-          "name": "Analisa Sentimen Team"
+          "name": "PasteJav Team"
         }
       }
     </script>
