deploy: 6bdc45b16cfbef2d2440416d6c01256f143e3ff7

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <link
       rel="icon"
       type="image/webp"
-      href="/icon.webp"
+      href="/assets/icon-43f13dc7.webp"
     />
     <link
       rel="apple-touch-icon"
-      href="/icon.webp"
+      href="/assets/icon-43f13dc7.webp"
     />
 
     <!-- Schema Markup untuk SoftwareApplication -->
