--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <!-- Favicon dan Ikon -->
     <link
       rel="icon"
-      type="image/webp"
-      href="/icon.webp"
+      type="image/jpg"
+      href="/icon.jpg"
     />
     <link
       rel="apple-touch-icon"
-      href="/icon.webp"
+      href="/icon.jpg"
     />
 
     <!-- Schema Markup untuk SoftwareApplication -->
