deploy: e573015f7e6ee264fbaa2c572ad842caeb3cdee8

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <!-- Favicon dan Ikon -->
     <link
       rel="icon"
-      type="image/webp"
-      href="/assets/icon-43f13dc7.webp"
+      type="image/jpg"
+      href="/icon.jpg"
     />
     <link
       rel="apple-touch-icon"
-      href="/assets/icon-43f13dc7.webp"
+      href="/icon.jpg"
     />
 
     <!-- Schema Markup untuk SoftwareApplication -->
