--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="monetag" content="f2a2fa8dd8764f2f9b76883ed6ec9893"/>
 
     <!-- Judul -->
     <title>PasteJav</title>
