--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="monetag" content="f2a2fa8dd8764f2f9b76883ed6ec9893"/>
+    <meta name="f4d645e1a702f9ff4efb6339ebc07da531bffc71" content="f4d645e1a702f9ff4efb6339ebc07da531bffc71" />
 
     <!-- Judul -->
     <title>PasteJav</title>
